# wtx-bench

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  tests.yml
common/: Cargo.toml
common/src/: lib.rs
evaluator/: Cargo.toml  build.rs
evaluator/assets/: cpp.Dockerfile  go.Dockerfile  rust.Dockerfile
evaluator/src/: bench_stats.rs  data.rs  grpc.rs  http2.rs  http2_framework.rs  language.rs  macros.rs  main.rs  protocol.rs  report_line.rs  web_socket.rs
protocols/grpc/tonic/: Cargo.toml
protocols/grpc/wtx/: Cargo.toml  build.rs  rust-toolchain
protocols/grpc/wtx/src/: main.rs
protocols/http2-framework/actix/: Cargo.toml
protocols/http2-framework/axum/: Cargo.toml
protocols/http2-framework/wtx/: Cargo.toml  rust-toolchain
protocols/http2-framework/wtx/src/: main.rs
protocols/http2/h2/: Cargo.toml
protocols/http2/h2/src/: main.rs
protocols/http2/wtx/: Cargo.toml
protocols/http2/wtx/src/: main.rs
protocols/web-socket/fastwebsockets/: Cargo.toml
protocols/web-socket/fastwebsockets/src/: main.rs
protocols/web-socket/gorilla/: main.go
protocols/web-socket/ohkami/: Cargo.toml
protocols/web-socket/ohkami/src/: main.rs
protocols/web-socket/ratchet/src/: main.rs
protocols/web-socket/socket-flow/: Cargo.toml
protocols/web-socket/socket-flow/src/: main.rs
protocols/web-socket/sockudo-ws/: Cargo.toml
protocols/web-socket/sockudo-ws/src/: main.rs
protocols/web-socket/soketto/: Cargo.toml
protocols/web-socket/soketto/src/: main.rs
protocols/web-socket/tokio-tungstenite/: Cargo.toml
protocols/web-socket/tokio-tungstenite/src/: main.rs
protocols/web-socket/tokio-websockets/: Cargo.toml  rust-toolchain
protocols/web-socket/tokio-websockets/src/: main.rs
protocols/web-socket/uWebSockets/: CMakeLists.txt  main.cpp  vcpkg.json
protocols/web-socket/ws/: main.js  package.json
protocols/web-socket/ws-tool/: Cargo.toml
protocols/web-socket/ws-tool/src/: main.rs
protocols/web-socket/wtx/: Cargo.toml  rust-toolchain
protocols/web-socket/wtx-web-socket/: Cargo.toml
protocols/web-socket/wtx-web-socket/src/: main.rs
protocols/web-socket/wtx/src/: main.rs
protocols/web-socket/yawc/: Cargo.toml
protocols/web-socket/yawc/src/: main.rs
site/: eslint.config.js  package-lock.json  package.json  postcss.config.js  svelte.config.js  vite.config.ts
site/src/: app.html
site/src/lib/: Csv.ts  Utils.ts  types.ts
site/src/routes/: +page.svelte  +page.ts  FirstPlacesChart.svelte  Header.svelte  ManyDatesChart.svelte  ManyDaysChart.svelte
