[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false
strip = "symbols"

[workspace]
exclude = [
    "protocols/web-socket/uWebSockets"
]
members = [
    "common",
    "evaluator",
    "protocols/web-socket/*"
]
resolver = "3"
