[dependencies]
flate2 = { default-features = false, features = ["rust_backend"], version = "1.0" }
tokio = { default-features = false, features = ["fs", "io-std", "macros", "process", "rt-multi-thread"], version = "1.39" }
wtx = { default-features = false, features = ["http2", "optimization", "pool", "tokio", "tokio-rustls", "webpki-roots", "web-socket-handshake"], git = "https://github.com/c410-f3r/wtx" }

[features]
all-protocols = ["http2", "web-socket"]
deploy = []
http2 = []
web-socket = []

[package]
edition = "2021"
name = "wtx-bench"
publish = false
version = "0.0.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false
strip = "symbols"