[build-dependencies]
pb-rs = { default-features = false, version = "0.10" }

[dependencies]
flate2 = { default-features = false, features = ["rust_backend"], version = "1.0" }
quick-protobuf = { default-features = false, version = "0.8" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], version = "1.0" }
tokio = { default-features = false, features = ["fs", "io-std", "macros", "process", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["grpc-client", "http-client-pool", "optimization",  "quick-protobuf", "serde_json", "tokio", "tokio-rustls", "webpki-roots", "web-socket-handshake"], version = "0.41" }
wtx-bench-common = { default-features = false, path = "../common" }

[features]
all-protocols = ["web-socket"]
deploy = []
grpc = []
http2-framework = []
web-socket = []

[package]
edition = "2024"
name = "wtx-evaluator"
publish = false
version = "0.0.0"
