[dependencies]
serde = { default-features = false, features = ["derive"], version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["getrandom", "http-server-framework", "nightly", "optimization", "rand_chacha", "serde_json", "tokio"], version = "0.34" }
rand_chacha = { default-features = false, features = ["os_rng"], version = "0.9" }

[package]
edition = "2024"
name = "wtx"
publish = false
version = "0.0.0"
