[dependencies]
serde = { default-features = false, features = ["derive"], version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["getrandom", "http-server-framework", "nightly", "optimization", "serde_json", "tokio"], version = "0.40" }

[package]
edition = "2024"
name = "wtx"
publish = false
version = "0.0.0"
