[dependencies]
bytes = { default-features = false, version = "1.0" }
h2 = { default-features = false, version = "0.4" }
http = { default-features = false, version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }

[package]
edition = "2021"
name = "h2"
publish = false
version = "0.0.0"
