[dependencies]
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["async-send", "http2", "optimization", "pool", "tokio"], git = "https://github.com/c410-f3r/wtx" }

[package]
edition = "2021"
name = "wtx"
publish = false
version = "0.0.0"
