[dependencies]
socket-flow = { default-features = false, version = "0.8" }
futures = { default-features = false, version = "0.3" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx-bench-common = { default-features = false, git = "https://github.com/c410-f3r/wtx-bench" }

[package]
edition = "2024"
name = "socket-flow-bench"
publish = false
version = "0.0.0"
