[dependencies]
bytes = { default-features = false, version = "1.0" }
futures-util = { default-features = false, features = ["sink"], version = "0.3" }
sockudo-ws = { default-features = false, features = ["tokio"], version = "1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
wtx-bench-common = { default-features = false, git = "https://github.com/c410-f3r/wtx-bench" }

[package]
edition = "2024"
name = "sockudo-ws"
publish = false
version = "0.0.0"
