[dependencies]
futures-util = { default-features = false, features = ["sink"], version = "0.3" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
tokio-websockets = { default-features = false, features = ["sha1_smol", "server", "simd"], version = "0.11" }
wtx-bench-common = { default-features = false, git = "https://github.com/c410-f3r/wtx-bench" }

[package]
edition = "2024"
name = "tokio-websockets"
publish = false
version = "0.0.0"
