[dependencies]
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["optimization", "pool", "tokio", "web-socket-handshake"], version = "0.34" }

[package]
edition = "2024"
name = "wtx"
publish = false
version = "0.0.0"
