[dependencies]
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["optimization", "tokio", "web-socket-handshake"], version = "0.41" }
wtx-bench-common = { default-features = false, git = "https://github.com/c410-f3r/wtx-bench" }

[package]
edition = "2024"
name = "wtx"
publish = false
version = "0.0.0"
